// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders as collapsed 1`] = `
.c2 {
  font-size: 0.5rem;
  padding: 0.5rem;
  background: #1A212A;
  -webkit-transition: opacity 0.4s ease-in-out;
  transition: opacity 0.4s ease-in-out;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 1;
  box-shadow: 0px 2.4px 7.2px rgba(0,0,0,0.18),0px 12.8px 28.8px rgba(0,0,0,0.22);
  margin-left: 0.5rem;
}

.c3:hover > .c1 {
  opacity: 1;
}

.c0 {
  height: 4rem;
  width: 5rem;
  padding-right: 0.75rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover > .c1 {
  opacity: 1;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    onClick={[Function]}
  >
    <div />
  </div>
  <div />
</div>
`;

exports[`Sidebar renders by default 1`] = `
.c3 {
  background: #1A212A;
  padding: 2rem;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: scroll;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c2 {
  font-size: 0.5rem;
  padding: 0.5rem;
  background: #1A212A;
  -webkit-transition: opacity 0.4s ease-in-out;
  transition: opacity 0.4s ease-in-out;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  opacity: 0;
  box-shadow: 0px 2.4px 7.2px rgba(0,0,0,0.18),0px 12.8px 28.8px rgba(0,0,0,0.22);
  position: absolute;
  top: 2rem;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 0;
}

.c0 {
  height: 100vh;
  width: 14.75rem;
  padding-right: 0.75rem;
  position: relative;
}

.c0:hover > .c1 {
  opacity: 1;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    onClick={[Function]}
  >
    <div />
  </div>
  <aside
    className="c3"
  />
</div>
`;
